--- a/index.html
+++ b/index.html
@@ -3,22 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock Paper Scissor Game</title>
+    <title>Rock Paper Scissor</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
         <div class="container">
-            <div class="title">
-                <h1>Rock Paper Scissor Game!</h1>
+            <div class="computer">
+                <h3>Computer</h3>
+            </div>
+            <span class="score">0 : 0</span>
+            <div class="user">
+                <h3>User</h3>
             </div>
         </div>
     </header>
-    <game class="game">
+    <section class="game">
         <div class="container">
-
+            <div class="hand-ai">
+                <img src="./images/Rock-ai.png" class="aiHand">
+            </div>
+            <div class="hand-user">
+                <img src="./images/rock-user.png" class="userHand">
+            </div>
         </div>
-    </game>
+    </section>
+    <footer class="footer">
+        <div class="container">
+            <div class="rock">
+                <button type="button" id="rock">
+                    <img src="./images/rock-icon.png" alt="rock icon" title="Rock">
+                </button>
+            </div>
+            <div class="paper" id="paper">
+                <button type="button"> 
+                    <img src="./images/paper-icon.png" alt="paper icon" title="Paper">
+                </button>  
+            </div>
+            <div class="scissor" id="scissor">
+                <button type="button">
+                    <img src="./images/scissor-icon.png" alt="scissor icon" title="Scissors">
+                </button>
+            </div>
+        </div>
+    </footer>
+    <div class="winner" style="display: none;">
+        <div class="container">
+            <div class="win-con">
+                <img src="" alt="">
+            </div>
+            <h2></h2>
+            <div class="restart">
+                <button>PLAY AGAIN</button>
+            </div>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
